:hammer: Config package

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,12 +19,7 @@
     "watch": "tamagui-build --watch"
   },
   "dependencies": {
-    "@tamagui/animations-moti": "^1.52.3",
-    "@tamagui/config": "^1.49.10",
-    "@tamagui/font-inter": "^1.52.3",
-    "@tamagui/react-native-media-driver": "^1.52.3",
-    "@tamagui/shorthands": "^1.52.3",
-    "@tamagui/themes": "^1.52.3",
+    "@luckysweater/config": "*",
     "tamagui": "^1.52.3"
   },
   "devDependencies": {
