--- a/app/app.json
+++ b/app/app.json
@@ -4,14 +4,20 @@
     "userInterfaceStyle": "automatic",
     "splash": {
       "backgroundColor": "#ddffe2",
-      "image": "./assets/splash.png",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain"
     },
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/icon.png",
     "name": "luckiersweater",
     "slug": "luckiersweater",
     "plugins": [
-      "expo-router"
+      [
+        "expo-router",
+        {
+          "origin": "https://acme.com",
+          "asyncRoutes": "development"
+        }
+      ]
     ]
   }
 }
