--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,15 +1,20 @@
 {
   "version": "0.0.0",
-  "name": "@luckysweater/config",
-  "main": "tamagui.config.ts",
+  "name": "@luckysweater/themes",
+  "main": "index.ts",
+  "sideEffects": false,
   "dependencies": {
     "@tamagui/animations-moti": "^1.52.3",
+    "@tamagui/colors": "^1.52.3",
     "@tamagui/config": "^1.49.10",
     "@tamagui/font-inter": "^1.52.3",
     "@tamagui/react-native-media-driver": "^1.52.3",
     "@tamagui/shorthands": "^1.52.3",
+    "@tamagui/theme-builder": "^1.52.3",
     "@tamagui/themes": "^1.52.3",
     "tamagui": "^1.52.3"
   },
-  "sideEffects": false
+  "devDependencies": {
+    "@tamagui/cli": "^1.52.7"
+  }
 }
