--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,7 +9,9 @@ logFilters:
     level: discard
   - code: YN0076
     level: discard
-  - code: YN0013
-    level: discard
-    
+
 nodeLinker: node-modules
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
