--- a/app/app.json
+++ b/app/app.json
@@ -11,13 +11,7 @@
     "name": "luckiersweater",
     "slug": "luckiersweater",
     "plugins": [
-      [
-        "expo-router",
-        {
-          "origin": "https://acme.com",
-          "asyncRoutes": "development"
-        }
-      ]
+      "expo-router"
     ]
   }
 }
