:hammer: Working stuff

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "watch": "yarn workspaces foreach -pi run watch",
     "postinstall": "yarn build",
-    "build": "yarn workspaces foreach --exclude next-app -pi run build"
+    "build": "yarn workspaces foreach --exclude next-app -pi run build",
+    "app": "cd app && yarn start"
   }
 }
