--- a/app/package.json
+++ b/app/package.json
@@ -3,48 +3,51 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "node_modules/.bin/expo start",
-    "android": "node_modules/.bin/expo start --android",
-    "ios": "node_modules/.bin/expo start --ios",
-    "web": "node_modules/.bin/expo start --web"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@luckysweater/components": "*",
-    "@luckysweater/ui": "*",
     "@luckysweater/themes": "*",
-    "@nderscore/tamagui-typescript-plugin": "^0.1.0",
-    "@tamagui/babel-plugin": "^1.49.10",
-    "@tamagui/lucide-icons": "^1.49.10",
-    "expo": "49.0.6",
+    "@luckysweater/ui": "*",
+    "@tamagui/babel-plugin": "^1.57.1",
+    "@tamagui/lucide-icons": "^1.57.1",
+    "expo": "49.0.8",
     "expo-constants": "~14.4.2",
     "expo-font": "11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.0",
+    "expo-navigation-bar": "^2.3.0",
+    "expo-router": "2.0.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0"
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "~3.24.0",
+    "react-native-svg": "13.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@types/react": "~18.2.14",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@types/react": "~18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.3",
-    "typescript": "^5.1.3"
+    "prettier": "^3.0.2",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
