--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,22 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "main": "index.ts",
-  "files": [
-    "src"
-  ],
-  "sideEffects": [
-    "*.css"
-  ],
-  "scripts": {
-    "build": "tamagui-build",
-    "watch": "tamagui-build --watch"
-  },
   "dependencies": {
     "@luckysweater/themes": "*",
-    "@nderscore/tamagui-typescript-plugin": "^0.1.0",
-    "tamagui": "^1.52.3"
-  },
-  "devDependencies": {
-    "@tamagui/build": "^1.52.3"
+    "@tamagui/core": "^1.57.1",
+    "@tamagui/get-token": "^1.57.1",
+    "@tamagui/text": "^1.57.1"
   }
 }
